Increase max pagination items to 100
