# openapi/course-survey-integration-api.spec.yml
@@ -193,7 +193,7 @@ components:
         type: integer
         description: The limit of course rounds per page.
         minimum: 1
-        maximum: 30
+        maximum: 100
         default: 30
   parameters:
     PageLimit:
@@ -203,7 +203,7 @@ components:
       schema:
         type: integer
         minimum: 1
-        maximum: 30
+        maximum: 100
         default: 30
       required: false
     PageOffset:
